--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^10.0.5",
     "wagmi": "^2.12.12"
   },
   "devDependencies": {
